Fix import export alignment

--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -14,7 +14,6 @@
 
 .following-manage__subscriptions-controls {
 	display: flex;
-	align-items: center;
 
 	.reader-import-button,
 	.reader-export-button {
